# consgfx

./: CMakeLists.txt  README.md  pyproject.toml
src/: consgfx_ext.cpp
src/consgfx/: consgfx_ext.pyi
